# lpdf-linux

./: README.md
ui/: .gitignore  README.md  eslint.config.js  index.html  package.json  test-api.js  vite.config.ts
ui/docs/plans/: 2026-02-22-home-layout-design.md  2026-02-22-home-layout-implementation-plan.md  2026-02-24-tahoe-glass-performance-design.md  2026-02-24-tahoe-glass-performance-implementation.md
ui/src/: App.tsx
ui/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: error.rs  lib.rs
ui/src-tauri/src/commands/: README.md  pdf.rs
ui/src-tauri/src/core/: README.md  mod.rs  thumbnails.rs  utils.rs
ui/src/api/: README.md  commands.convert.test.ts  commands.ts
ui/src/assets/: README.md
ui/src/components/: README.md
ui/src/components/common/: README.md  SettingsModal.tsx
ui/src/components/home/: FileOpenPanel.tsx  README.md
ui/src/components/home/organize/: OrganizePanel.tsx
ui/src/components/pdf/: README.md  SharedPdfRendering.tsx
ui/src/components/workspace/: ContextualSubBar.tsx  EditorCanvas.tsx  InspectorPanel.tsx  PageSidebar.tsx  README.md  TopToolbar.tsx
ui/src/features/: README.md
ui/src/hooks/: README.md
ui/src/layouts/: README.md
ui/src/state/: README.md  editorStore.ts
ui/src/styles/: README.md  app.css  tokens.css
ui/src/types/: README.md
ui/src/utils/: README.md  concurrency.ts
