[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
lopdf = "0.34.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2.0.0-beta.0"
pdfium-render = "0.8.37"
image = "0.25.6"
tauri-plugin-shell = "2.0.0-rc"
